@startuml
class com.example.trainingapp.model.Exercise {
~ ExerciseType exerciseType
~ String reps
~ int sets
+ String getName()
+ int getSets()
+ String getReps()
+ ExerciseType getType()
}
class com.example.trainingapp.model.MuscleList {
- {static} String DATA_FILE_NAME
- Context context
- {static} MuscleList instance
+ {static} MuscleList getInstance(Context)
+ void prepareDataFile()
- String readDataFromFile(InputStream)
+ void saveDataFile()
- void loadDataFile()
+ void addSets(String[],int)
}
class com.example.trainingapp.model.ExerciseList {
- {static} String DATA_FILE_NAME
- Context context
+ {static} ExerciseList instance
+ {static} ExerciseList getInstance(Context)
- void prepareDataFile()
- String readDataFromFile(InputStream)
+ void saveDataFile()
+ void createEx(String,String)
}
class com.example.trainingapp.model.ExerciseType {
- String name
- String movement
- String[] muscles
+ {static} String[] movementTypes
+ {static} String[] getMovementTypes()
+ String getMovement()
+ String[] getMuscles()
+ String toString()
}
class com.example.trainingapp.model.Day {
+ String toString(int)
+ void deleteEx(int)
}
class com.example.trainingapp.model.Week {
- {static} String DATA_FILE_NAME
+ {static} Week instance
- Context context
+ {static} int count
+ {static} Week getInstance(Context)
+ void setContext(Context)
+ void addDay(Day)
+ void prepareDataFile()
- String readDataFromFile(InputStream)
+ void saveDataFile()
- void loadDataFile()
}
class com.example.trainingapp.model.Muscle {
- String name
- int count
+ void editCount(int)
+ String toString()
+ String getName()
}


java.io.Serializable <|.. com.example.trainingapp.model.MuscleList
java.util.ArrayList <|-- com.example.trainingapp.model.MuscleList
java.io.Serializable <|.. com.example.trainingapp.model.ExerciseList
java.util.ArrayList <|-- com.example.trainingapp.model.ExerciseList
java.io.Serializable <|.. com.example.trainingapp.model.ExerciseType
java.io.Serializable <|.. com.example.trainingapp.model.Day
java.util.ArrayList <|-- com.example.trainingapp.model.Day
java.io.Serializable <|.. com.example.trainingapp.model.Week
java.util.ArrayList <|-- com.example.trainingapp.model.Week
com.example.trainingapp.model.Serializable <|.. com.example.trainingapp.model.Muscle
@enduml